# DoodleJump

./: CMakeLists.txt  CMakeLists.txt.qtds  Trampo.h  bullet.h  jetpack.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  monster.cpp  monster.h  monster1.cpp  monster1.h  monster2.cpp  monster2.h  monster3.h  platform-generator.cpp  platform-generator.h  platform.cpp  platform.h  platform1.h  platform2.cpp  platform2.h  platform3.h  resources.qrc  shield.cpp  shield.h  trampo.cpp
